<resources>
    <string name="app_name" translatable="false">MIRUNI</string>

    <string name="title" translatable="false">MIRUNI</string>

    <!-- 포그라운드 서비스 감지 -->
    <string name="foreground_comment">앱으로 돌아가\n성장을 이어가보세요!</string>

    <!-- 방해 요소 차단 -->
    <string name="block_title">방해요소 차단</string>
    <string name="block_comment">핸드폰을 잠그고 할 일에 더 집중해보세요!</string>
    <string name="chekck">확인</string>
    <string name="skip">넘어가기</string>
    <string name="bolck_setting_comment">방해요소를 차단할 시간을 설정하세요!</string>

    <!-- 리포트 가이드 -->
    <string name="report_guide_title">리포트란?</string>
    <string name="report_guide_content">한달 간 일정 수행한 것을 토대로\n제작되는 행동 패턴 분석 리포트에요!\n나의 습관이 어떤지 파악하고 개선할 수\n있어요!</string>
    <string name="report_todo_title">오픈하기 위해서</string>
    <string name="report_todo_content">등록한 일정을 80% 이상 완료해야해요. \n→80%를 달성하면 리포트가 만들어지고\n땅콩 30개를 사용해 오픈할 수 있어요!</string>

    <!-- Storage Fragment -->
    <string name="storage_comment">작은 회고가 모여 큰 성찰이 되고,\n 더 나은 습관을 만들어줄거예요!</string>
    <string name="memoir">회고록</string>
    <string name="my_memoir">나의 회고</string>
    <string name="my_report">나의 리포트</string>
    <string name="report_thismonth">이번달 리포트\n오픈!</string>
    <string name="report_open">오픈하기</string>
    <string name="before_report">저번달 리포트</string>
    <string name="before_report2">저번달 리포트 보기</string>
    <string name="open_thismont_report">이번달 리포트</string>

    <!-- layout checkpopup-->
    <string name="delete_check">일정을 삭제하시겠어요?</string>

    <!-- memoir fragment-->
    <string name="memoir_write">회고록 작성하기</string>
    <string name="memoir_emotionTag">감정태그</string>
    <string name="memoir_emotionTag_add">일정을 마친 뒤, 감정이 어떠한가요?</string>
    <string name="memoir_archivement">성취도(만족도)</string>
    <string name="memoir_archivement_add">내가 수행한 정도에 얼마나 만족하나요?</string>
    <string name="memoir_record">한 줄 기록</string>
    <string name="memoir_record_add">느꼈던 점 등을 자유롭게 기록해보세요.</string>
    <string name="memoir_complete">회고록</string>
    <string name="memoir_not_written">회고록 작성을 완료하지 않았어요!\n회고록을 작성해주세요</string>

    <!-- tool page-->
    <string name="tool_schedule">일정 쪼개기</string>
    <string name="schedule_content">일을 미리 끝낼 수 있는\n적절한 일정을 알려줄게요!</string>
    <string name="tool_lock">방해요소 차단</string>
    <string name="lock_content">집중에 방해되는 요소를 차단하고\n할 일에만 몰두해봐요!</string>
    <string name="tool_alarm">알람</string>

    <!-- homepage -->
    <string name="task_text1">오늘의 할 일은</string>
    <string name="task_text2">가 있어요!</string>
    <string name="process_text">오늘 목표의 %1$s를 달성했어요!</string>
    <string name="percent">$1$s%</string>
    <string name="hompepage_process_text">진행률</string>
    <string name="nextSchedule">다가오는 다음 일정</string>
    <string name="today_schedule">오늘의 일정</string>

    <!-- mypage-->
    <string name="username">%1$s</string>
    <string name="email">%1$s</string>
    <string name="mypage">My page</string>
    <string name="account_settings">Account settings</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="general">General</string>

    <!-- alarm-->
    <string name="popupAlarm">팝업 알람</string>
    <string name="bannerAlarm">배너 알람</string>

    <!-- alarmSetting-->
    <string name="alarmSetting">알람세팅</string>
    <string name="oneM">1분</string>
    <string name="fiveM">5분</string>
    <string name="tenM">10분</string>
    <string name="thirM">30분</string>
    <string name="oneH">1시간</string>
    <string name="cycle">주기</string>

    <!-- 달력 날짜 -->
    <string-array name="monthArr">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <!-- 쪼개기 가이드 -->
    <string name="split_guide_type_title">1. 일정 유형 선택</string>
    <string name="split_guide_show_detail"><u>(상세 설명 보기)</u></string>
    <string name="split_guide_type_content">: 7가지 작업 유형 중, 내 일정과 가장 가까운 항목을 선택하세요.</string>
    <string name="split_guide_volume_title">2. 일정 범위</string>
    <string name="split_guide_volume_content">
         : 이번 일정에서 해야 할 일의 전체 범위를 구체적으로 작성하세요.
        \n 세부적일수록 AI가 더 정확하게 쪼개드려요!
        \n (예: "보고서 작성" → "마케팅 보고서 초안 작성부터 수정·제출까지")
    </string>
    <string name="split_guide_request_title">3. 세부 요청 사항</string>
    <string name="split_guide_request_content">
         : AI가 일정을 나눌 때 참고할 특별한 요청을 적어주세요.
        \n (예: 30분 단위로 나누기, 중요한 작업을 먼저 배치하기, 휴식 포함하기)
    </string>
    <string name="split_detail_guide_item1_title">1. 몰입형/사고 중심 작업</string>
    <string name="split_detail_guide_item1">
        : 인지를 하며 생각의 단계를 요하는 작업
        \n • 예: 리서치, 발표 준비, 기획안 작성, 보고서(논문) 작성, 코딩</string>
    <string name="split_detail_guide_item2_title">2. 창작/표현 작업</string>
    <string name="split_detail_guide_item2">
        무언가를 만들어내는 창작 기반 작업
        \n • 예시: 글쓰기, 콘텐츠 제작, 디자인, 영상 편집, 포트폴리오 작업</string>
    <string name="split_detail_guide_item3_title">3. 학습/정보 정리 작업</string>
    <string name="split_detail_guide_item3">
        지식을 습득하거나 정리하는 목적의 작업
        \n • 예시: 강의 듣기, 독서, 요약 정리, 복습, 문서 정리</string>
    <string name="split_detail_guide_item4_title">4. 실무/행정 처리 작업</string>
    <string name="split_detail_guide_item4">
        <![CDATA[준비 > 실행 > 완료의 명확한 흐름이 있는 실제 처리성 업무
         \n • 예시: 공과금 납부, 이사 준비, 병원 예약, 서류 제출]]></string>
    <string name="split_detail_guide_item5_title">5. 반복/루틴형 작업</string>
    <string name="split_detail_guide_item5">
        구조가 단순하거나 매일 반복되는 작업
        \n • 예시: 운동, 설거지, 영어 단어 암기, 명상, 스트레칭</string>
    <string name="split_detail_guide_item6_title">6. 협업/의사소통 작업</string>
    <string name="split_detail_guide_item6">
        누군가와 함께 일하거나 소통하며 논의하는 작업
        \n • 예시: 미팅 준비, 회의록 정리 등</string>
    <string name="split_detail_guide_item7_title">7. 준비/계획형 작업</string>
    <string name="split_detail_guide_item7">
        무언가 목표를 위해 미리 계획하거나 준비하는 작업
        \n • 예시: 여행 준비, 장보기 리스트 작성 등</string>

    <!-- 일정 쪼개기 -->
    <string name="schedule_split_loading_guide">
        AI 자동 업무 쪼개기 기능을 활용하여
        \n 부담감을 느끼지 않을 만큼 일을
        \n 쪼개줄게요!</string>
    <string name="schedule_split_complete_guide">
        미루니가 쪼갠 일정 스케줄을
        \n 확인해보세요!</string>

    <string name="schedule_execution_guide">
        지금 멈추면
        \n땅콩을 1개 받을 수 있어요!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edit">수정하기</string>
    <string name="start">시작하기</string>
    <string name="commit">등록하기</string>
    <string name="stop">중지</string>
    <string name="complete">완료</string>
    <string name="accept">확인</string>
    <string name="day">일</string>
    <string name="minute">분</string>

    <style name="hour">시간</style>

    <string name="no_eng">No</string>
    <string name="yes_eng">Yes</string>
    <string name="back_eng">Back</string>
    <string name="next_eng">Next</string>

    <string name="complete_plus">+</string>
    <string name="complete_get_point">3개의 포인트를 얻었어!</string>
    <string name="complete_miruni_growup">
        36분 만에
        \n 미루니 성장
        \n 완료!</string>

    <string name="writing_title_guide">Set an Title</string>
    <string name="writing_date_guide">July 5 2023</string>
    <string name="writing_content_guide">
        1. 기분 (5가지 중 택)
        \n 2. 성취도/만족도 (100%)
        \n 3. 2줄 정도의 기록</string>

    <string name="review_blank">_____</string>
    <string name="review_time_check">동안 할거야?</string>
    <string name="device_lock">핸드폰 잠금</string>

    <string name="schedule">스케줄표</string>
    <string name="schedule_title_guide">UMC 기획안 만들기</string>
    <string name="schedule_date_guide">5/27 ~ 5/30</string>
    <string name="schedule_time_guide">19:00~20:00</string>

    <string name="to_do">슬슬 시작하면 좋은 일</string>

    <string name="my_storage">My Storage</string>
    <string name="my_review">나의 회고</string>
    <string name="review_title_guide">회고 #</string>
    <string name="review_description_guide">Here is my description in my memories #</string>
    <string name="delayed_time_dialog_guide">지금 멈추시겠다면,\n다시 실행할 시간을 설정해주세요!</string>
    <string name="popup_schedule_delay_title">지금 멈추시겠다면,\n다시 실행할 시간을 설정해주세요!</string>

    <!--구글 api 연동 client_id-->
    <string name="google_client_id">80560946457-2i055ifbec6dg96g95c82iua8iqdt18g.apps.googleusercontent.com</string>
</resources>