<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="229sp"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="274sp"
        android:paddingBottom="13sp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/popup_split_detail_guide_title_top_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.038"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/popup_split_detail_guide_title_start_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.087"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/popup_split_detail_guide_title_end_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.913"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/popup_split_detail_guide_item_title_start_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.047"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/popup_split_detail_guide_item_content_start_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.074"/>

        <TextView
            android:id="@+id/popup_split_detail_guide_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="쪼개기 가이드"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            android:textColor="@color/main"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_title_start_line"
            app:layout_constraintTop_toTopOf="@id/popup_split_detail_guide_title_top_line"/>
        <TextView
            android:id="@+id/popup_split_detail_guide_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="일정 유형 상세 설명"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            android:textColor="#BBBBBB"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_title_start_line"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_title_tv"/>

        <ImageView
            android:id="@+id/popup_split_detail_guide_close_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/popup_close"
            app:layout_constraintEnd_toEndOf="@id/popup_split_detail_guide_title_end_line"
            app:layout_constraintTop_toTopOf="@id/popup_split_detail_guide_title_tv"/>

        <TextView
            android:id="@+id/popup_split_detail_guide_item1_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item1_title"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            android:layout_marginTop="9sp"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_title_start_line"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_tv"/>
        <TextView
            android:id="@+id/popup_split_detail_guide_item1_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item1"
            android:fontFamily="@font/dmsans_regular"
            android:textSize="11sp"
            android:lineSpacingExtra="0dp"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item1_title_tv"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_content_start_line"
            app:layout_constraintEnd_toEndOf="@id/popup_split_detail_guide_close_iv"/>

        <TextView
            android:id="@+id/popup_split_detail_guide_item2_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item2_title"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_title_start_line"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item1_tv"/>
        <TextView
            android:id="@+id/popup_split_detail_guide_item2_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item2"
            android:fontFamily="@font/dmsans_regular"
            android:textSize="11sp"
            android:lineSpacingExtra="0dp"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item2_title_tv"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_content_start_line"
            app:layout_constraintEnd_toEndOf="@id/popup_split_detail_guide_close_iv"/>

        <TextView
            android:id="@+id/popup_split_detail_guide_item3_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item3_title"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_title_start_line"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item2_tv"/>
        <TextView
            android:id="@+id/popup_split_detail_guide_item3_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item3"
            android:fontFamily="@font/dmsans_regular"
            android:textSize="11sp"
            android:lineSpacingExtra="0dp"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item3_title_tv"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_content_start_line"
            app:layout_constraintEnd_toEndOf="@id/popup_split_detail_guide_close_iv"/>

        <TextView
            android:id="@+id/popup_split_detail_guide_item4_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item4_title"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_title_start_line"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item3_tv"/>
        <TextView
            android:id="@+id/popup_split_detail_guide_item4_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item4"
            android:fontFamily="@font/dmsans_regular"
            android:textSize="11sp"
            android:lineSpacingExtra="0dp"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item4_title_tv"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_content_start_line"
            app:layout_constraintEnd_toEndOf="@id/popup_split_detail_guide_close_iv"/>

        <TextView
            android:id="@+id/popup_split_detail_guide_item5_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item5_title"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_title_start_line"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item4_tv"/>
        <TextView
            android:id="@+id/popup_split_detail_guide_item5_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item5"
            android:fontFamily="@font/dmsans_regular"
            android:textSize="11sp"
            android:lineSpacingExtra="0dp"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item5_title_tv"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_content_start_line"
            app:layout_constraintEnd_toEndOf="@id/popup_split_detail_guide_close_iv"/>

        <TextView
            android:id="@+id/popup_split_detail_guide_item6_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item6_title"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_title_start_line"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item5_tv"/>
        <TextView
            android:id="@+id/popup_split_detail_guide_item6_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item6"
            android:fontFamily="@font/dmsans_regular"
            android:textSize="11sp"
            android:lineSpacingExtra="0dp"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item6_title_tv"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_content_start_line"
            app:layout_constraintEnd_toEndOf="@id/popup_split_detail_guide_close_iv"/>

        <TextView
            android:id="@+id/popup_split_detail_guide_item7_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item7_title"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_title_start_line"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item6_tv"/>
        <TextView
            android:id="@+id/popup_split_detail_guide_item7_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/split_detail_guide_item7"
            android:fontFamily="@font/dmsans_regular"
            android:textSize="11sp"
            android:lineSpacingExtra="0dp"
            app:layout_constraintTop_toBottomOf="@id/popup_split_detail_guide_item7_title_tv"
            app:layout_constraintStart_toStartOf="@id/popup_split_detail_guide_item_content_start_line"
            app:layout_constraintEnd_toEndOf="@id/popup_split_detail_guide_close_iv"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>