<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <TextView
        android:id="@+id/start_logo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        style="@style/MainTitle"
        android:layout_marginTop="122dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/start_clock_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/start_clock_sample"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_logo_tv"/>

    <LinearLayout
        android:id="@+id/start_period_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_clock_iv">

        <TextView
            android:id="@+id/start_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_blank"
            style="@style/RalewayBold700"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/start_time_check_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_time_check"
            style="@style/RalewayBold700"
            android:textSize="30sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/start_next_tv"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:text="@string/next_eng"
        android:background="@drawable/black_round15_square"
        android:textColor="@color/white"
        style="@style/RalewayBold700"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>