<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LockFragment">

    <TextView
        android:id="@+id/lock_logo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        style="@style/MainTitle"
        android:layout_marginTop="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/lock_lock_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lock"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toBottomOf="@id/lock_logo_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/lock_device_lock_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_lock"
        style="@style/RalewayBold700"
        android:textSize="30sp"
        android:layout_marginTop="67dp"
        app:layout_constraintStart_toStartOf="@id/lock_lock_iv"
        app:layout_constraintEnd_toEndOf="@id/lock_lock_iv"
        app:layout_constraintTop_toBottomOf="@id/lock_lock_iv"/>

    <TextView
        android:id="@+id/lock_no_tv"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:text="@string/no_eng"
        android:background="@drawable/black_round15_square"
        android:textColor="@color/white"
        android:gravity="center"
        style="@style/RalewayBold700"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lock_yes_tv"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/lock_yes_tv"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:text="@string/yes_eng"
        android:background="@drawable/black_round15_square"
        android:textColor="@color/white"
        android:gravity="center"
        style="@style/RalewayBold700"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/lock_no_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/lock_no_tv"
        app:layout_constraintBottom_toBottomOf="@id/lock_no_tv"/>
</androidx.constraintlayout.widget.ConstraintLayout>