<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="274sp"
    android:minHeight="229sp"
    android:paddingBottom="13sp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_split_guide_title_top_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.061"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_split_guide_title_start_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.087"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_split_guide_title_end_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.913"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_split_guide_item_title_start_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.047"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_split_guide_item_content_start_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.074"/>

    <TextView
        android:id="@+id/popup_split_guide_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="쪼개기 가이드"
        android:fontFamily="@font/dmsans_bold"
        android:textSize="11sp"
        android:textColor="@color/main"
        app:layout_constraintStart_toStartOf="@id/popup_split_guide_title_start_line"
        app:layout_constraintTop_toTopOf="@id/popup_split_guide_title_top_line"/>

    <ImageView
        android:id="@+id/popup_split_guide_close_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/popup_close"
        app:layout_constraintEnd_toEndOf="@id/popup_split_guide_title_end_line"
        app:layout_constraintTop_toTopOf="@id/popup_split_guide_title_tv"/>

    <TextView
        android:id="@+id/popup_split_guide_item1_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_guide_type_title"
        android:fontFamily="@font/dmsans_bold"
        android:textSize="10sp"
        android:layout_marginTop="9sp"
        app:layout_constraintStart_toStartOf="@id/popup_split_guide_item_title_start_line"
        app:layout_constraintTop_toBottomOf="@id/popup_split_guide_title_tv"/>
    <TextView
        android:id="@+id/popup_split_guide_detail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_guide_show_detail"
        android:fontFamily="@font/dmsans_regular"
        android:textSize="9sp"
        android:textColor="#528AFB"
        app:layout_constraintStart_toEndOf="@id/popup_split_guide_item1_title_tv"
        app:layout_constraintTop_toTopOf="@id/popup_split_guide_item1_title_tv"
        app:layout_constraintBottom_toBottomOf="@id/popup_split_guide_item1_title_tv"/>
    <TextView
        android:id="@+id/popup_split_guide_item1_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/split_guide_type_content"
        android:fontFamily="@font/dmsans_regular"
        android:textSize="10sp"
        android:lineSpacingExtra="0dp"
        app:layout_constraintTop_toBottomOf="@id/popup_split_guide_item1_title_tv"
        app:layout_constraintStart_toStartOf="@id/popup_split_guide_item_content_start_line"
        app:layout_constraintEnd_toEndOf="@id/popup_split_guide_close_iv"/>

    <TextView
        android:id="@+id/popup_split_guide_item2_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_guide_volume_title"
        android:fontFamily="@font/dmsans_bold"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/popup_split_guide_item_title_start_line"
        app:layout_constraintTop_toBottomOf="@id/popup_split_guide_item1_tv"/>
    <TextView
        android:id="@+id/popup_split_guide_item2_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/split_guide_volume_content"
        android:fontFamily="@font/dmsans_regular"
        android:textSize="10sp"
        android:lineSpacingExtra="0dp"
        app:layout_constraintTop_toBottomOf="@id/popup_split_guide_item2_title_tv"
        app:layout_constraintStart_toStartOf="@id/popup_split_guide_item_content_start_line"
        app:layout_constraintEnd_toEndOf="@id/popup_split_guide_close_iv"/>

    <TextView
        android:id="@+id/popup_split_guide_item3_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_guide_request_title"
        android:fontFamily="@font/dmsans_bold"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/popup_split_guide_item_title_start_line"
        app:layout_constraintTop_toBottomOf="@id/popup_split_guide_item2_tv"/>
    <TextView
        android:id="@+id/popup_split_guide_item3_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/split_guide_request_content"
        android:fontFamily="@font/dmsans_regular"
        android:textSize="10sp"
        android:lineSpacingExtra="0dp"
        app:layout_constraintTop_toBottomOf="@id/popup_split_guide_item3_title_tv"
        app:layout_constraintStart_toStartOf="@id/popup_split_guide_item_content_start_line"
        app:layout_constraintEnd_toEndOf="@id/popup_split_guide_close_iv"/>
</androidx.constraintlayout.widget.ConstraintLayout>